--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 <div class="resize_target" id="main_div">
 <div class="resize_target" id="preloading_div">
   <table width="100%" height="100%">
-  <tr align="center" valign="middle"><td><img src="image/preloading.gif" /></td></tr>
+  <tr align="center" valign="middle"><td><img src="img/preloading.gif" /></td></tr>
   </table>
 </div>
 <div class="resize_target" id="table_div">
